Home Component Structure

--- a/TailwindPlatziTravel/src/app/app.component.html
+++ b/TailwindPlatziTravel/src/app/app.component.html
@@ -1,3 +1,14 @@
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
+
+
+<body>
+  <header>
+    <app-nav></app-nav>
+  </header>
+  <main>
+    <section class="w-full h-screen">
+      <app-home></app-home>
+      <app-our-recomendation></app-our-recomendation>
+      <app-trending-stays></app-trending-stays>
+    </section>
+  </main>
+</body>
