--- a/TailwindPlatziTravel/src/app/Components/home/home.component.html
+++ b/TailwindPlatziTravel/src/app/Components/home/home.component.html
@@ -2,9 +2,9 @@
 <div id="home">
   <div class="w-full h-3/4">
     <div class="w-full h-full flex  flex-col absolute space-y-96 py-4 items-center ">
-      <input class="outline-none p-3 rounded-full shadow-md" placeholder="san Francisco" type="search" name="" id="">
+      <input class="outline-none p-3 rounded-full shadow-md" placeholder="San Francisco" type="search" name="" id="">
       <button class="w-36 rounded-full text-xl text-primary shadow-xl font-semibold p-4 bg-white">
-        Explorar
+        Explore
       </button>
     </div>
     <div class="w-full h-full">
