Re organizacion componentes y responsive

--- a/TailwindPlatziTravel/src/app/Components/footer/footer.component.html
+++ b/TailwindPlatziTravel/src/app/Components/footer/footer.component.html
@@ -1,1 +1,16 @@
-<p>footer works!</p>
+
+<footer id="OwnerInformation" class="p-4 w-full h-auto bg-gray-200 flex justify-between items-center pb-20 lg:rounded-t-lg lg:pb-4">
+  <div>
+    <p class="lg:text-xl">© 2023, <a href="https://www.instagram.com/soy.acevedo_/"><b>Kevin Acevedo</b> </a>🦉</p>
+  </div>
+  <div class="space-x-2 flex justify-center gap-2 ">
+    <a href="https://www.linkedin.com/in/kevin-julian-acevedo-salazar/" target="_blank" class="text-blue-600 hover:text-blue-800">
+      <fa-icon class="text-2xl lg:text-4xl linkedin-icon trans" [icon]="faLinkedin"></fa-icon>
+    </a>
+    <a href="https://github.com/kevinAcevedo240" target="_blank" class="text-gray-600 hover:text-gray-800">
+      <fa-icon class="text-2xl lg:text-4xl" [icon]="faGithub"></fa-icon>
+    </a>
+  </div>
+</footer>
+
+
