--- a/TailwindPlatziTravel/src/app/app.component.html
+++ b/TailwindPlatziTravel/src/app/app.component.html
@@ -1,14 +1,18 @@
 
 
-<body>
+<body  class="font-Montserrat flex flex-col min-h-screen scroll-smooth">
   <header>
     <app-nav></app-nav>
   </header>
   <main>
-    <section class="w-full h-screen">
+    <section class="w-full h-full">
       <app-home></app-home>
       <app-our-recomendation></app-our-recomendation>
       <app-trending-stays></app-trending-stays>
+      <app-faq></app-faq>
+
     </section>
+    <app-tab-bar></app-tab-bar>
   </main>
+  <app-footer></app-footer>
 </body>
