--- a/TailwindPlatziTravel/src/app/Components/faq/faq.component.html
+++ b/TailwindPlatziTravel/src/app/Components/faq/faq.component.html
@@ -1,1 +1,10 @@
-<p>faq works!</p>
+<div class="p-4 w-full mb-4" id="Faqs">
+  <div class="w-full h-full px-4 flex flex-col space-y-4">
+    <p class="tittle-section pb-6 mt-4">FAQs</p>
+    <div *ngFor="let item of faqs">
+      <p class="tittle-faq tittle-responsive">{{item.Tittle}}</p>
+      <p class="description-faq description-responsive">{{item.Description}}</p>
+    </div>
+
+  </div>
+</div>
