--- a/TailwindPlatziTravel/src/app/Components/home/home.component.html
+++ b/TailwindPlatziTravel/src/app/Components/home/home.component.html
@@ -1,15 +1,14 @@
-
 <div id="home">
   <div class="w-full h-3/4">
-    <div class="w-full h-full flex  flex-col absolute space-y-96 py-4 items-center ">
-      <input class="outline-none p-3 rounded-full shadow-md" placeholder="San Francisco" type="search" name="" id="">
-      <button class="w-36 rounded-full text-xl text-primary shadow-xl font-semibold p-4 bg-white">
-        Explore
-      </button>
-    </div>
-    <div class="w-full h-full">
-      <img src="../../../assets/img/sanFrancisco.jpg" alt="">
-    </div>
-
+      <div class="home-box box-responsive">
+          <input type="search" class="input-search lg:hidden" placeholder="San Francisco" name="" id="">
+          <div class="hidden h-auto lg:w-2/6 lg:flex pb-6">
+              <p class="text-4xl ml-16 font-bold text-black typing-effect" >{{ texts[currentTextIndex] }}</p>
+          </div>
+          <button class="main-button lg:ml-16">Explore</button>
+      </div>
+      <div class="w-full h-full background-responsive">
+          <img class="lg:hidden" src="../../../assets/img/sanFrancisco.jpg" alt="San Francisco City">
+      </div>
   </div>
 </div>
