--- a/TailwindPlatziTravel/src/app/Components/trending-stays/trending-stays.component.html
+++ b/TailwindPlatziTravel/src/app/Components/trending-stays/trending-stays.component.html
@@ -1,1 +1,61 @@
-<div id="featured_rentals"></div>
+<!-- <div class="px-6 w-full lg:px-6" id="trending_stays">
+  <p class="tittle-section pb-6 mt-6">Trending Stays</p>
+  <div class="w-full h-full flex flex-col items-center justify-center">
+    <div class="w-full h-96 bg-chicago bg-cover rounded-xl mb-8">
+      <p class="tittle-card text-black">Chicago</p>
+      <p class="description-card ">2 bedrooms, bathroom and kitchen</p>
+    </div>
+    <div class="hidden p-6 lg:flex lg:h-full lg:w-full lg:space-x-4">
+      <div class="w-full h-96 bg-LA bg-cover rounded-xl lg:h-auto ">
+        <p class="tittle-card text-white">Los Angeles</p>
+        <p class="description-card text-white">4 bedrooms, 3 bathrooms, kitchen and private pool</p>
+      </div>
+      <div class=" h-full w-full space-y-4 lg:h-full lg:w-full lg:flex lg:flex-col lg:pl-8">
+        <div class="w-full h-96 bg-miami bg-cover rounded-xl ">
+          <p class="tittle-card text-white">Miami</p>
+          <p class="description-card text-white">3 bedrooms, 2 bathrooms, kitchen and excellent ocean view</p>
+        </div>
+        <div class="w-full h-96 bg-bali bg-cover rounded-xl ">
+          <p class="tittle-card text-white">Bali</p>
+          <p class="description-card text-white">2 bedrooms, bathroom, kitchen and private pool</p>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</div> -->
+
+
+<div id="trending-stays" class="p-6 h-full w-full">
+  <p class="text-3xl text-primary font-semibold">Trending Stays</p>
+  <div class="w-full h-full flex flex-col space-y-4 items-center justify-center mt-6">
+    <div class="w-full h-96 bg-chicago bg-cover rounded-xl lg:h-[38rem] lg:text-right lg:bg-center lg:pt-12">
+      <p class="tittle-card text-black tittle-responsive">Chicago</p>
+      <p class="text-sm pl-8 text-black mr-8 description-responsive">
+        2 rooms, bathroom and kitchen.
+      </p>
+    </div>
+    <div class="w-full h-full grid grid-cols-1 lg:grid-cols-5 lg:grid-rows-2 lg:place-items-center lg:place-content-stretch gap-4">
+      <div class="w-full h-96 bg-LA bg-cover rounded-xl lg:row-span-2 lg:col-span-2 lg:h-[49rem] lg:text-right lg:bg-center lg:pt-12">
+        <p class="tittle-card text-white tittle-responsive">Los Angeles</p>
+        <p class="description description-responsive">
+          4 rooms, 3 bathrooms, kitchen and private pool.
+        </p>
+      </div>
+      <div class="w-full h-96 bg-miami bg-cover rounded-xl lg:row-span-1 lg:col-span-3 lg:text-right lg:bg-center lg:pt-12">
+        <p class="tittle-card text-white tittle-responsive">Miami</p>
+        <p class="description description-responsive">
+          3 rooms, 2 bathrooms, kitchen and amazing sea view.
+        </p>
+      </div>
+      <div class="w-full h-96 bg-bali bg-cover rounded-xl lg:row-span-1 lg:col-span-3 lg:text-right lg:bg-center lg:pt-12">
+        <p class="tittle-card text-white tittle-responsive">Bali</p>
+        <p class="description description-responsive">
+          2 rooms, 2 bathrooms, kitchen and private pool.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
