--- a/TailwindPlatziTravel/src/app/Components/home/home.component.html
+++ b/TailwindPlatziTravel/src/app/Components/home/home.component.html
@@ -1,5 +1,5 @@
-<div id="home">
-  <div class="w-full h-3/4">
+<div class="w-full h-3/4" id="home">
+  <div class="w-full h-full">
       <div class="home-box box-responsive">
           <input type="search" class="input-search lg:hidden" placeholder="San Francisco" name="" id="">
           <div class="hidden h-auto lg:w-2/6 lg:flex pb-6">
@@ -7,7 +7,7 @@
           </div>
           <button class="main-button lg:ml-16">Explore</button>
       </div>
-      <div class="w-full h-full background-responsive">
+      <div class="w-full h-full lg:h-[40rem] lg:bg-sanFranciscoDesktop lg:bg-cover lg:bg-center">
           <img class="lg:hidden" src="../../../assets/img/sanFrancisco.jpg" alt="San Francisco City">
       </div>
   </div>
