--- a/TailwindPlatziTravel/src/app/Components/trending-stays/trending-stays.component.html
+++ b/TailwindPlatziTravel/src/app/Components/trending-stays/trending-stays.component.html
@@ -27,8 +27,8 @@
 </div> -->
 
 
-<div id="trending-stays" class="p-6 h-full w-full">
-  <p class="text-3xl text-primary font-semibold">Trending Stays</p>
+<div id="trending_stays" class="p-6 h-full w-full">
+  <p class="text-3xl text-primary font-semibold darkColor">Trending Stays</p>
   <div class="w-full h-full flex flex-col space-y-4 items-center justify-center mt-6">
     <div class="w-full h-96 bg-chicago bg-cover rounded-xl lg:h-[38rem] lg:text-right lg:bg-center lg:pt-12">
       <p class="tittle-card text-black tittle-responsive">Chicago</p>
