--- a/TailwindPlatziTravel/src/app/app.component.html
+++ b/TailwindPlatziTravel/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 
-<body  class="font-Montserrat flex flex-col min-h-screen scroll-smooth">
+<body  class="body-style" [class.darkMode]="isDarkMode">
   <header>
     <app-nav></app-nav>
   </header>
