--- a/TailwindPlatziTravel/src/app/Components/tab-bar/tab-bar.component.html
+++ b/TailwindPlatziTravel/src/app/Components/tab-bar/tab-bar.component.html
@@ -1,18 +1,18 @@
-<div class="tab-phone tab-responsive" id="tab_bar">
+<div class="tab-phone tab-responsive" [class.darkPrimary]="isDarkMode" id="tab_bar">
   <a href="#home" class="transition duration-500">
-    <fa-icon class="fa-xl text-gray-400" [icon]="faHome"></fa-icon>
+    <fa-icon class="fa-xl text-gray-400" [class.darkColor]="isDarkMode" [icon]="faHome"></fa-icon>
   </a>
   <a href="#trending_stays" class="transition duration-500">
-    <fa-icon class="fa-xl text-gray-400" [icon]="faMagnifyingGlass"></fa-icon>
+    <fa-icon class="fa-xl text-gray-400" [class.darkColor]="isDarkMode" [icon]="faMagnifyingGlass"></fa-icon>
   </a>
   <a href="#recommendations" class="transition duration-500">
-    <fa-icon class="fa-xl text-gray-400" [icon]="faHeart"></fa-icon>
+    <fa-icon class="fa-xl text-gray-400" [class.darkColor]="isDarkMode" [icon]="faHeart"></fa-icon>
   </a>
   <button>
-    <fa-icon class="fa-xl text-primary" [icon]="faMoon"></fa-icon>
+    <fa-icon class="fa-xl text-primary" [icon]="isDarkMode ? faSun : faMoon" (click)="toggleDarkMode()"></fa-icon>
   </button>
   <a href="#OwnerInformation" class="transition duration-500">
-    <fa-icon class="fa-xl text-gray-400" [icon]="faUser"></fa-icon>
+    <fa-icon class="fa-xl text-gray-400" [class.darkColor]="isDarkMode" [icon]="faUser"></fa-icon>
   </a>
 </div>
 
