--- a/TailwindPlatziTravel/src/app/Components/nav/nav.component.html
+++ b/TailwindPlatziTravel/src/app/Components/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="w-full h-14 hidden bg-white p-4 justify-between fixed z-10 lg:flex "[class.darkbackground]="isDarkMode">
   <div class="h-auto w-auto">
-    <p class="text-2xl text-primary font-black" [class.darkColor]="isDarkMode">Platzi Travel</p>
+    <p class="text-2xl text-primary font-black" [class.darkColor]="isDarkMode">Travel Agency</p>
   </div>
   <div class="flex space-x-8 ">
     <a class="option" [class.darkColor]="isDarkMode" href="#home">Home</a>
